<resources>
    <string name="app_name">TastyFoods</string>
    <string name="food_name">Noodle </string>
    <string name="shell">334</string>
    <string name="notable">4.3</string>
    <string name="money">400.000</string>
    <string name="describe">Phở là một món ăn có thể ăn vào bất cứ khoảng thời gian nào mà bạn muốn: sáng, trưa, chiều, tối đều được cả. Điểm đặc biệt, món phở không ăn kèm, uống kèm bất cứ thứ gì khác. Một bát phở bao gồm: nước dùng, bánh phở, gia vị ăn kèm như tiêu, hành lá, lát chanh, ớt… Nước dùng của phở có thể được chế biến từ xương bò: xương cục, xương ống và xương vè </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name_1">Pork sandwich</string>
    <string name="name_2">Cheese pizza</string>
    <string name="name_3">Beef sandwich</string>
    <string name="name_4">Seafood pizza</string>
    <string name="name_5">Coca-cola</string>

    <string name="name_6">Pepsi</string>


    <string name="describe_1">Crispy and spicy</string>
    <string name="describe_2">Crispy and chewy pizza</string>
    <string name="describe_3">Chewy and fragrant</string>
    <string name="describe_4">Including shrimp, vegetables</string>
    <string name="describe_5">Increase energy</string>
    <string name="describe_6">Increase energy</string>


<!--    <String name = "price_1">$4</String>-->
<!--    <String name = "price_2">$21</String>-->
<!--    <String name = "price_3">$3</String>-->
<!--    <String name = "price_4">$5</String>-->
<!--    <String name = "price_5">$1</String>-->
<!--    <String name = "price_6">$1</String>-->
</resources>